--- a/package/package.json
+++ b/package/package.json
@@ -10,6 +10,7 @@
     "@mui/lab": "5.0.0-alpha.133",
     "@mui/material": "5.13.4",
     "@mui/styled-engine-sc": "5.12.0",
+    "@mui/x-date-pickers": "^6.19.5",
     "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
