--- a/package/package.json
+++ b/package/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "13.5.0",
     "apexcharts": "3.41.0",
     "axios-mock-adapter": "1.21.4",
+    "dayjs": "^1.11.10",
     "feather-icons-react": "^0.7.0",
     "formik": "^2.4.5",
     "moment": "^2.29.1",
