--- a/package/package.json
+++ b/package/package.json
@@ -21,6 +21,7 @@
     "feather-icons-react": "^0.7.0",
     "formik": "^2.4.5",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.45",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
     "react-dom": "18.2.0",
